[tool.poetry]
name = "engster-server"
version = "0.1.0"
description = "Engster Backend Server"
authors = ["sjquant <seonujang92@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
sanic-jwt-extended = "1.0-dev.9"
sanic = "^19.12.2"
gunicorn = "^20.0.4"
uvicorn = "^0.11.2"
pillow = "^7.0.0"
gino = "^0.8.5"
psycopg2-binary = "^2.8.4"
pandas = "^0.25.3"
click = "^7.0"
alembic = "^1.3.3"
pydantic = "^1.3"
aiohttp = "^3.6.2"
sanic-cors = {version = "^0.10.0-beta.1", allow-prereleases = true}

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
black = "^19.10b0"
rope = "^0.16.0"
autopep8 = "^1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
