[tool.poetry]
name = "engster-server"
version = "0.1.0"
description = "Engster Backend Server"
authors = ["sjquant <seonujang92@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
sanic-jwt-extended = "1.0.dev12"
uvicorn = "^0.11.2"
gino = "^0.8.5"
psycopg2-binary = "^2.8.4"
click = "^7.0"
alembic = "^1.3.3"
pydantic = "^1.7"
aiohttp = "^3.7.4"
sanic-cors = "^0.10.0.post3"
sanic = "^20.9"
mangum = "^0.10.0"
aiosmtplib = "^1.1.4"
Jinja2 = "^2.11.3"
aiobotocore = {extras = ["awscli"], version = "^1.2.1"}
asyncpg = "0.21.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
black = "^19.10b0"
rope = "^0.16.0"
pytest = "^6.1.2"
python-dotenv = "^0.15.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
